--- a/index.html
+++ b/index.html
@@ -1,18 +1,95 @@
 <!DOCTYPE html>
-
 <html>
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>my-first-website</title>
-  <LINK href="styles.css" rel="stylesheet" type="text/css">
-</head>
+	<head>
+		<title>Tudo sobre Einstein</title>
+		<meta charset="UTF-8">
+		<meta name="description" content="Albert Einstein">
+		<meta name="author" content="Samuel Werlang">
+		<meta name="keyword" content="albert einstein, einstein, teoria da relatividade">
+		<meta name="viewport" content="width=devvice-width, initial-scale=1.0"> <!-- Resolucao para celular -->
+		<link rel="stylesheet" type="text/css" href="style.css" />
+	</head>
 
-<body>
+	<body>
+	<header>
+		<!--<div class="flex-container">
+			<img src="dir1/albert.jpeg" alt="Sorry, we can't load the img" style="width:285px; position:fixed; top:10px; left:10px; box-shadow:10px 10px 5px black; border-radius:50%; opacity:0.8"/>
+		</div> -->
+		<div class="header2">
+			<center><h2>Tudo Sobre Einstein</h2></center>
+		</div>
+		<nav>
+		<!--	<div class="flex-container">
+			<center><a href="" target="_blank">Home</a>
+			<a href="" target="_top">Contact</a>
+			<a href="" target="_blank">About Us</a></center>
+			</div> -->
+		</nav>
+	</header>
+	<main>
+		<div>
+		<div><center><iframe  class="video-border flex-container" style="position:relative; top:40px;" width="560" height="315" src="https://www.youtube.com/embed/gPSk0Xjz0og" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+		</div>
+		<center><h1  class="color-grey font-courier flex-container" style="position:relative; top:30px;">Einstein</h1><p class="color-grey font-courier flex-container" style="padding:20px 200px 150px 200px;">Albert Einstein (1879-1955) foi um físico alemão, nascido na cidade de Ulm em
+1879. Quando jovem, mudou-se para a Suíça, onde se formou, tornando-se professor da
+Escola Politécnica de Zurique. Em 1903, casou-se com Mileva Maric, com quem teve dois
+filhos. Foi uma das mentes mais brilhantes da ciência, e o seu legado inclui a explicação do
+efeito fotoelétrico, a formulação da teoria da relatividade espacial geral e restrita.
+A teoria da relatividade geral, por exemplo, permitiu que criássemos o GPS (Sistema
+de Posicionamento Global). Como a gravidade terrestre afeta a propagação das ondas
+eletromagnéticas, uma série de correções é feita nos sinais de satélite, de forma que esses
+satélites são capazes de nos localizar rapidamente e com grande precisão.
+Ainda no domínio da teoria da relatividade, Einstein previu a possibilidade da existência de
+ondas gravitacionais, que foram detectadas em 2017, durante a colisão de dois buracos
+negros.
+No ramo da Mecânica Quântica, Einstein deixou diversas questões em aberto, que,
+futuramente, viriam a dar origem a uma nova área da Física, a Óptica Quântica. Os estudos
+de Einstein relacionados ao comportamento da luz renderam-lhe a explicação do efeito
+fotoelétrico, empregado nas células fotovoltaicas, capazes de produzir energia solar, bem
+como a luz laser. Também foi capaz de estabelecer uma relação de proporcionalidade entre
+massa e energia por meio da sua fórmula mundialmente conhecida: E = mc². Com essa
+relação, o físico mostrou que a massa inercial (m) multiplicada pelo quadrado da velocidade
+da luz (c²) é equivalente a uma quantidade de energia E. As conclusões de Einstein sobre a
+energia de repouso levaram à criação da bomba atômica e também ao surgimento de
+usinas nucleares.
+Einstein teve um vasto legado científico, no entanto, foi o seu artigo sobre o efeito
+fotoelétrico que levou a comunidade científica a laureá-lo com o prêmio Nobel de Física.
+Nesse artigo, Einstein explica a origem e o funcionamento desse importante fenômeno
+quântico. Por fim, uma citação desse grande cientista: “A imaginação é mais importante que
+o conhecimento.”, frase dita por Einstein durante uma entrevista em um jornal, no ano de
+1929.
+Concluindo o raciocínio, esses três cientistas ajudaram a construir o que vemos
+como o mundo atual, eles criaram, ou deram brecha para a criação de muitas coisas, desde
+a mecânica quântica, com Max Planck, até a bomba atômica e a quimioterapia com
+Einstein, e a primeira mulher a ganhar um Prêmio Nobel, Marie Curie, com seus
+experimentos com a radioatividade. Com isto fica claro que sem esses cientistas não
+haveria a vida que nos rodeia hoje.
+Praticamente todos os avanços tecnológicos foram somente possíveis graças a
+esses cientistas, a cura do câncer por exemplo, em alguns casos a quimioterapia e capaz
+de curar o câncer, um processo somente obtido pelos estudos destes três cientistas.
+Sendo assim, podemos concluir que sem todos os estudos e projetos desses
+cientistas, muitos dos aparelhos eletrônicos que utilizamos hoje em dia, simplesmente não
+existiriam.</p></center>
+		</div>
 
-<img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
+		</main>
+			<article>
+				<section>
+					<aside>
+					</aside>
+				</section>
+			</article>
 
-<!-- Change this code here by copy and pasting your template on line 15 -->
-<p>Welcome to your first GitHub Pages website!</p>
+		<footer>
+			<div></div>
+		</footer>
 
-</body>
+
+
+
+
+
+	</body>
+
+
 </html>
